# video-pi

./: .gitignore  README.md  pyproject.toml
config/: default.yaml
docs/: ARCHITECTURE.md  ROADMAP.md  SETUP_PI.md
scripts/: install_dev.sh  install_pi.sh
src/videopi/: __init__.py  __main__.py  app.py  config.py
src/videopi/camera/: __init__.py  base.py  dummy.py  picamera.py  v4l2.py
src/videopi/ui/: __init__.py  kivy_app.py  monitor_screen.py  video_layer.py
systemd/: video-pi.service
tests/: test_camera.py
